fixed remove button with overflow

--- a/src/styles/CartPopUp.css
+++ b/src/styles/CartPopUp.css
@@ -95,7 +95,6 @@
 
   .cart-pop-up-item-delete {
     width: 4%;
-    position: absolute;
     right: 9.5%;
   }
 
